<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appmax.adisonz.mysiam.MainActivity">

    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/bg_siam"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/padding">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/textColorPrimary"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/padding"
        android:background="#82ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@drawable/logo_siam" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_accout" />

            <EditText
                android:id="@+id/edtUser"
                android:textColorHint="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_pass" />

            <EditText
                android:id="@+id/edtPassword"
                android:textColorHint="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />


        </LinearLayout>

        <TextView
            android:clickable="true"
            android:id="@+id/txtNewRegister"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/h2"
            android:text="@string/new_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/Login"
            android:textColor="@color/textColorPrimary" />




    </LinearLayout>




</RelativeLayout>

